# halide_course

./: .gitignore  Dockerfile  README.md  build_all.sh  clean_all.sh  docker_run.sh
01/01_hist/: CMakeLists.txt  main.cpp
01/02_blur/: CMakeLists.txt  main.cpp
02/01_gradiente/: main.cpp
02/02_debug_trace/: main.cpp  proc.stmt.html
02/03_threshold/: CMakeLists.txt  main.cpp
02/04_brilho/: main.cpp
02/05_contraste/: main.cpp
03/00_basic/: CMakeLists.txt  main.cpp
03/01_reorder/: main.cpp
03/02_split/: main.cpp
03/03_fuse/: main.cpp
03/04_tile/: main.cpp
03/05_vec/: main.cpp
03/06_unroll/: main.cpp
03/07_split_uneven/: main.cpp
03/08_fuse_tile_parallel/: main.cpp
03/09_fast/: main.cpp
03/10_threshold_parallel/: main.cpp
03/12_contraste_parallel/: main.cpp
03/respostas/10_threshold_parallel/: main.cpp
03/respostas/11_brilho_parallel/: CMakeLists.txt  main.cpp
04/00_basic/: main.cpp
04/01_compute_prod/: main.cpp
04/02_compute_at/: main.cpp
04/03_store_root/: main.cpp
04/04_store_out/: main.cpp
04/05_tile/: main.cpp
04/06_combined/: main.cpp
04/07_blur/: main.cpp
05/00_basic/: main.cpp
05/01_rdom/: main.cpp
05/02_rdom_blur/: main.cpp
05/03_aot_build/: blur.h  main.cpp
05/04_aot_run/: CMakeLists.txt  main.cpp
